# stockCpp

./: .gitignore  CMakeLists.txt  Makefile  Makefile.static  README.md  STATIC_LINKING.md  build.ps1  main.cpp  stocks.json
